control/chameleon_zf90.F90


  interface
     function CHAMELEON_zheevd_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='CHAMELEON_zheevd_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheevd_Tile_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zheevd_Tile_c
  end interface

  interface
     function CHAMELEON_zhegst_Tile_c(itype,uplo,A,B) &
          & bind(c, name='CHAMELEON_zhegst_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegst_Tile_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zhegst_Tile_c
  end interface

  interface
     function CHAMELEON_zhegv_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='CHAMELEON_zhegv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegv_Tile_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
     end function CHAMELEON_zhegv_Tile_c
  end interface

  interface
     function CHAMELEON_zhegvd_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='CHAMELEON_zhegvd_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegvd_Tile_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
     end function CHAMELEON_zhegvd_Tile_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zhemm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='CHAMELEON_zhemm_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhemm_Tile_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zhemm_Tile_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zher2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='CHAMELEON_zher2k_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zher2k_Tile_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zher2k_Tile_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zherk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='CHAMELEON_zherk_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zherk_Tile_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       real(kind=c_double), value :: alpha
       type(c_ptr), value :: A
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zherk_Tile_c
  end interface
#endif

  interface
     function CHAMELEON_zhetrd_Tile_c(jobz,uplo,A,D,E,T,Q,LDQ) &
          & bind(c, name='CHAMELEON_zhetrd_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhetrd_Tile_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zhetrd_Tile_c
  end interface

  interface
     function CHAMELEON_zlacpy_Tile_c(uplo,A,B) &
          & bind(c, name='CHAMELEON_zlacpy_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlacpy_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zlacpy_Tile_c
  end interface

  interface
     function CHAMELEON_zlange_Tile_c(norm,A,work) &
          & bind(c, name='CHAMELEON_zlange_Tile')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlange_Tile_c
       integer(kind=c_int), value :: norm
       type(c_ptr), value :: A
       type(c_ptr), value :: work
     end function CHAMELEON_zlange_Tile_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zlanhe_Tile_c(norm,uplo,A,work) &
          & bind(c, name='CHAMELEON_zlanhe_Tile')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlanhe_Tile_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: work
     end function CHAMELEON_zlanhe_Tile_c
  end interface
#endif

  interface
     function CHAMELEON_zlansy_Tile_c(norm,uplo,A,work) &
          & bind(c, name='CHAMELEON_zlansy_Tile')
       use iso_c_binding
       implicit none
       real(kind=c_double) :: CHAMELEON_zlansy_Tile_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: work
     end function CHAMELEON_zlansy_Tile_c
  end interface

  interface
     function CHAMELEON_zlaset_Tile_c(uplo,alpha,beta,A) &
          & bind(c, name='CHAMELEON_zlaset_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaset_Tile_c
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: A
     end function CHAMELEON_zlaset_Tile_c
  end interface

  interface
     function CHAMELEON_zlaswp_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='CHAMELEON_zlaswp_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswp_Tile_c
       type(c_ptr), value :: A
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
     end function CHAMELEON_zlaswp_Tile_c
  end interface

  interface
     function CHAMELEON_zlaswpc_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='CHAMELEON_zlaswpc_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswpc_Tile_c
       type(c_ptr), value :: A
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
     end function CHAMELEON_zlaswpc_Tile_c
  end interface

  interface
     function CHAMELEON_zlauum_Tile_c(uplo,A) &
          & bind(c, name='CHAMELEON_zlauum_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlauum_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
     end function CHAMELEON_zlauum_Tile_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zplghe_Tile_c(bump,uplo,A,seed) &
          & bind(c, name='CHAMELEON_zplghe_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplghe_Tile_c
       real(kind=c_double), value :: bump
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplghe_Tile_c
  end interface
#endif

  interface
     function CHAMELEON_zplgsy_Tile_c(bump,uplo,A,seed) &
          & bind(c, name='CHAMELEON_zplgsy_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplgsy_Tile_c
       complex(kind=c_double_complex), value :: bump
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplgsy_Tile_c
  end interface

  interface
     function CHAMELEON_zplrnt_Tile_c(A,seed) &
          & bind(c, name='CHAMELEON_zplrnt_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnt_Tile_c
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
     end function CHAMELEON_zplrnt_Tile_c
  end interface

  interface
     function CHAMELEON_zplrnk_Tile_c(K,C,seedA,seedB) &
          & bind(c, name='CHAMELEON_zplrnk_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnk_Tile_c
       integer(kind=c_int), value :: K
       type(c_ptr), value :: C
       integer(kind=c_long_long), value :: seedA
       integer(kind=c_long_long), value :: seedB
     end function CHAMELEON_zplrnk_Tile_c
  end interface

  interface
     function CHAMELEON_zposv_Tile_c(uplo,A,B) &
          & bind(c, name='CHAMELEON_zposv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zposv_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zposv_Tile_c
  end interface

  interface
     function CHAMELEON_zsysv_Tile_c(uplo,A,B) &
          & bind(c, name='CHAMELEON_zsysv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsysv_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zsysv_Tile_c
  end interface

  interface
     function CHAMELEON_zpotrf_Tile_c(uplo,A) &
          & bind(c, name='CHAMELEON_zpotrf_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrf_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
     end function CHAMELEON_zpotrf_Tile_c
  end interface

  interface
     function CHAMELEON_zsytrf_Tile_c(uplo,A) &
          & bind(c, name='CHAMELEON_zsytrf_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrf_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
     end function CHAMELEON_zsytrf_Tile_c
  end interface

  interface
     function CHAMELEON_zpotri_Tile_c(uplo,A) &
          & bind(c, name='CHAMELEON_zpotri_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotri_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
     end function CHAMELEON_zpotri_Tile_c
  end interface

  interface
     function CHAMELEON_zpotrs_Tile_c(uplo,A,B) &
          & bind(c, name='CHAMELEON_zpotrs_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrs_Tile_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
     end function CHAMELEON_zpotrs_Tile_c
  end interface
